fixed race ID in test set-up
Change-Id: Ie11ff825b3b0c15a48fb10649bf8e24c673f21d9